textbook.css: fix content overflow in print view

--- a/css/textbook.css
+++ b/css/textbook.css
@@ -37,6 +37,10 @@ mark {
         max-width: 100%;
     }
 
+    #content-wrapper {
+        max-width: 100%;
+    }
+
     .non-printable{
         display: none !important;
     }
